[package]
name = "task-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.1", features = ["derive"] }
diesel = { version = "2.1.1", features = ["sqlite"] }
diesel_migrations = { version = "2.1.0", features = ["sqlite"] }
dotenv = "0.15.0"
